Removed unnecessary library files

--- a/www/index.html
+++ b/www/index.html
@@ -2,9 +2,6 @@
 <html>
 
 <head>
-    <meta http-equiv="Content-Security-Policy"
-        content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
-
     <!-- Required meta tags-->
     <meta charset="utf-8">
     <meta name="viewport"
@@ -15,7 +12,6 @@
     <title>stardew-tracker</title>
     <!-- Path to Framework7 Library CSS -->
     <link rel="stylesheet" href="lib/framework7/css/framework7.bundle.min.css">
-    <link rel="stylesheet" href="lib/framework7/css/framework7-icons.css">
 
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -64,7 +60,7 @@
                         </div>
                         <!-- Second tab, should have "tab" class and unique id attribute -->
                         <div class="tab" id="summer">
-                            <div id="summerList" class="list virtual-list">
+                            <div id="summerList" class="list">
                                 <h3 class="text-align-center"><strong>Farming:</strong></h3>
                                 <ul>
                                     <li>
