Locked app to portrait mode; initialized empty database for the lists of items

--- a/www/index.html
+++ b/www/index.html
@@ -60,16 +60,17 @@
                         </div>
                         <!-- Second tab, should have "tab" class and unique id attribute -->
                         <div class="tab" id="summer">
-                            <div id="summerList" class="list">
+                            <div class="list">
                                 <h3 class="text-align-center"><strong>Farming:</strong></h3>
-                                <ul>
+                                <ul id="summerList">
                                     <li>
-                                        <div class="item-content desc">
-                                            <div class="item-media">
-                                                <i class="icon my-icon"></i>
-                                            </div>
+                                        <div class="item-content desc no-padding-left">
                                             <div class="item-inner">
-                                                <div class="item-title">
+                                                <div class="item-media padding-horizontal">
+                                                    <img src="img/items/Junimo.png" width="48" height="48">
+                                                    <i class="icon images"></i>
+                                                </div>
+                                                <div class="item-title padding-left">
                                                     Name
                                                 </div>
                                                 <div class="item-after">
@@ -81,12 +82,12 @@
                                         </div>
                                     </li>
                                     <li>
-                                        <div class="item-content">
-                                            <div class="item-media">
-                                                <i class="icon my-icon"></i>
-                                            </div>
+                                        <div class="item-content no-padding-left">
                                             <div class="item-inner">
-                                                <div class="item-title">
+                                                <div class="item-media padding-horizontal">
+                                                    <img src="img/items/Blueberry.png" width="48" height="48">
+                                                </div>
+                                                <div class="item-title padding-left">
                                                     Blueberry
                                                 </div>
                                                 <div class="item-after">
