Implemented generation of items from a database based on season rather than manually entering HTML

--- a/www/index.html
+++ b/www/index.html
@@ -56,64 +56,41 @@
                         <!-- First tab, should have "tab" class and unique id attribute -->
                         <!-- First tab is active by default - additional "tab-active" class -->
                         <div class="tab tab-active" id="spring">
-                            Spring Content
+                            <div class="list">
+                                <h3 class="text-align-center"><strong>Farming:</strong></h3>
+                                <ul id="springList">
+                                </ul>
+                            </div>
                         </div>
                         <!-- Second tab, should have "tab" class and unique id attribute -->
                         <div class="tab" id="summer">
                             <div class="list">
                                 <h3 class="text-align-center"><strong>Farming:</strong></h3>
                                 <ul id="summerList">
-                                    <li>
-                                        <div class="item-content desc no-padding-left">
-                                            <div class="item-inner">
-                                                <div class="item-media padding-horizontal">
-                                                    <img src="img/items/Junimo.png" width="48" height="48">
-                                                    <i class="icon images"></i>
-                                                </div>
-                                                <div class="item-title padding-left">
-                                                    Name
-                                                </div>
-                                                <div class="item-after">
-                                                    Where to get
-                                                </div>
-                                                <div class="item-after">
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="item-content no-padding-left">
-                                            <div class="item-inner">
-                                                <div class="item-media padding-horizontal">
-                                                    <img src="img/items/Blueberry.png" width="48" height="48">
-                                                </div>
-                                                <div class="item-title padding-left">
-                                                    Blueberry
-                                                </div>
-                                                <div class="item-after">
-                                                    Seeds at Pierre's Shop
-                                                </div>
-                                                <div class="item-after">
-                                                    <label class="checkbox">
-                                                        <input type="checkbox">
-                                                        <i class="icon-checkbox"></i>
-                                                    </label>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
                                 </ul>
                             </div>
                         </div>
                         <!-- Third tab, should have "tab" class and unique id attribute -->
                         <div class="tab" id="fall">
-                            Fall Content
+                            <div class="list">
+                                <h3 class="text-align-center"><strong>Farming:</strong></h3>
+                                <ul id="fallList">
+                                </ul>
+                            </div>
                         </div>
                         <div class="tab" id="winter">
-                            Winter Content
+                            <div class="list">
+                                <h3 class="text-align-center"><strong>Farming:</strong></h3>
+                                <ul id="winterList">
+                                </ul>
+                            </div>
                         </div>
                         <div class="tab" id="any">
-                            Any Content
+                            <div class="list">
+                                <h3 class="text-align-center"><strong>Farming:</strong></h3>
+                                <ul id="anyList">
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -125,6 +102,7 @@
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="lib/framework7/js/framework7.bundle.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/database.js"></script>
 </body>
 
 </html>
