Redesigned item display; prepped for additional detail dropdown

--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
     <title>stardew-tracker</title>
     <link rel="stylesheet" href="lib/framework7/css/framework7.bundle.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/fontello.css">
 </head>
 
 <body>
