Wrote README and updated app icons

--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,7 @@
             <div data-name="home" class="page">
                 <div class="navbar" id="navbar">
                     <div class="navbar-inner justify-content-center">
-                        <div class="title">Community Center Tracker</div>
+                        <div class="title">Stardew Tracker</div>
                     </div>
                 </div>
                 <div class="toolbar tabbar toolbar-top">
