Added ability to switch between bundle and season views

--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,10 @@
         <div class="view view-main">
             <div data-name="home" class="page">
                 <div class="navbar" id="navbar">
+                    <div class="navbar-inner justify-content-left margin-left">
+                        <a href="#bundles" class="button button-fill tab-link type">View by Bundle</a>
+                        <a href="#spring" class="button button-fill tab-link hidden type">View by Season</a>
+                    </div>
                     <div class="navbar-inner justify-content-center">
                         <div class="title">Stardew Tracker</div>
                     </div>
@@ -53,6 +57,7 @@
                         </div>
                         <div class="tab" id="any">
                         </div>
+                        <div class="tab" id="bundles">Bundle Sorting</div>
                     </div>
                 </div>
             </div>
