Made view switching prettier and responsive on all screen sizes

--- a/www/index.html
+++ b/www/index.html
@@ -19,13 +19,12 @@
             <div data-name="home" class="page">
                 <div class="tabs">
                     <div class="tab tab-active" id="seasons">
-                        <div class="navbar" id="navbar">
-                            <div class="navbar-inner justify-content-left margin-left">
-                                <a href="#bundles" class="button button-fill tab-link type">Bundles</a>
+                        <div class="navbar justify-content-center align-content-center" id="navbar">
+                            <div class="navbar-inner row no-gap">
+                                <a href="#seasons" class="button button-outline tab-link type col-50">Seasons</a>
+                                <a href="#bundles" class="button button-fill tab-link type col-50">Bundles</a>
                             </div>
-                            <div class="navbar-inner justify-content-center">
-                                <div class="title">Stardew Tracker</div>
-                            </div>
+                            <div class="title">Stardew Tracker</div>
                         </div>
                         <div class="toolbar tabbar toolbar-top">
                             <div class="toolbar-inner">
@@ -62,13 +61,12 @@
                         </div>
                     </div>
                     <div class="tab" id="bundles">
-                        <div class="navbar" id="navbar">
-                            <div class="navbar-inner justify-content-left margin-left">
-                                <a href="#seasons" class="button button-fill tab-link type">Seasons</a>
+                        <div class="navbar justify-content-center align-content-center" id="navbar">
+                            <div class="navbar-inner row no-gap">
+                                <a href="#seasons" class="button button-fill tab-link type col-50">Seasons</a>
+                                <a href="#bundles" class="button button-outline tab-link type col-50">Bundles</a>
                             </div>
-                            <div class="navbar-inner justify-content-center">
-                                <div class="title">Stardew Tracker</div>
-                            </div>
+                            <div class="title">Stardew Tracker</div>
                         </div>
                         <div class="toolbar tabbar toolbar-top">
                             <div class="toolbar-inner">
@@ -92,7 +90,6 @@
                         <div class="page-content">
                             <div class="tabs">
                                 <div class="tab tab-active" id="pantry">
-                                    test
                                 </div>
                                 <div class="tab" id="Crafts">
                                 </div>
