Tabs under bundles view properly named and ID'd

--- a/www/index.html
+++ b/www/index.html
@@ -69,21 +69,21 @@
                             <div class="title">Stardew Tracker</div>
                         </div>
                         <div class="toolbar tabbar toolbar-top">
-                            <div class="toolbar-inner">
-                                <a href="#pantry" class="tab-link tab-link-active">
+                            <div class="toolbar-inner text-align-center">
+                                <a href="#craftsRoom" class="tab-link tab-link-active">
+                                    Crafts<br>Room
+                                </a>
+                                <a href="#pantry" class="tab-link">
                                     Pantry
                                 </a>
-                                <a href="#Crafts" class="tab-link">
-                                    Crafts
+                                <a href="#fishTank" class="tab-link">
+                                    Fish<br>Tank
                                 </a>
-                                <a href="#Fish" class="tab-link">
-                                    Fish
+                                <a href="#boilerRoom" class="tab-link">
+                                    Boiler<br>Room
                                 </a>
-                                <a href="#Mining" class="tab-link">
-                                    Mining
-                                </a>
-                                <a href="#Misc" class="tab-link">
-                                    Misc
+                                <a href="#bulletinBoard" class="tab-link">
+                                    Bulletin<br>Board
                                 </a>
                             </div>
                         </div>
