Fixed app not scrolling properly after bundle tab created

--- a/www/index.html
+++ b/www/index.html
@@ -17,35 +17,35 @@
         <div class="statusbar"></div>
         <div class="view view-main">
             <div data-name="home" class="page">
-                <div class="tabs">
-                    <div class="tab tab-active" id="seasons">
-                        <div class="navbar justify-content-center align-content-center" id="navbar">
-                            <div class="navbar-inner row no-gap">
-                                <a href="#seasons" class="button button-outline tab-link type col-50">Seasons</a>
-                                <a href="#bundles" class="button button-fill tab-link type col-50">Bundles</a>
+                <div class="page-content">
+                    <div class="tabs">
+                        <div class="tab tab-active" id="seasons">
+                            <div class="navbar justify-content-center align-content-center" id="navbar">
+                                <div class="navbar-inner row no-gap">
+                                    <a href="#seasons" class="button button-outline tab-link type col-50">Seasons</a>
+                                    <a href="#bundles" class="button button-fill tab-link type col-50">Bundles</a>
+                                </div>
+                                <div class="title">Stardew Tracker</div>
                             </div>
-                            <div class="title">Stardew Tracker</div>
-                        </div>
-                        <div class="toolbar tabbar toolbar-top">
-                            <div class="toolbar-inner">
-                                <a href="#spring" class="tab-link tab-link-active">
-                                    Spring
-                                </a>
-                                <a href="#summer" class="tab-link">
-                                    Summer
-                                </a>
-                                <a href="#fall" class="tab-link">
-                                    Fall
-                                </a>
-                                <a href="#winter" class="tab-link">
-                                    Winter
-                                </a>
-                                <a href="#any" class="tab-link">
-                                    Any
-                                </a>
+                            <div class="toolbar tabbar toolbar-top">
+                                <div class="toolbar-inner">
+                                    <a href="#spring" class="tab-link tab-link-active">
+                                        Spring
+                                    </a>
+                                    <a href="#summer" class="tab-link">
+                                        Summer
+                                    </a>
+                                    <a href="#fall" class="tab-link">
+                                        Fall
+                                    </a>
+                                    <a href="#winter" class="tab-link">
+                                        Winter
+                                    </a>
+                                    <a href="#any" class="tab-link">
+                                        Any
+                                    </a>
+                                </div>
                             </div>
-                        </div>
-                        <div class="page-content">
                             <div class="tabs">
                                 <div class="tab tab-active" id="spring">
                                 </div>
@@ -59,45 +59,43 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="tab" id="bundles">
-                        <div class="navbar justify-content-center align-content-center" id="navbar">
-                            <div class="navbar-inner row no-gap">
-                                <a href="#seasons" class="button button-fill tab-link type col-50">Seasons</a>
-                                <a href="#bundles" class="button button-outline tab-link type col-50">Bundles</a>
+                        <div class="tab" id="bundles">
+                            <div class="navbar justify-content-center align-content-center" id="navbar">
+                                <div class="navbar-inner row no-gap">
+                                    <a href="#seasons" class="button button-fill tab-link type col-50">Seasons</a>
+                                    <a href="#bundles" class="button button-outline tab-link type col-50">Bundles</a>
+                                </div>
+                                <div class="title">Stardew Tracker</div>
                             </div>
-                            <div class="title">Stardew Tracker</div>
-                        </div>
-                        <div class="toolbar tabbar toolbar-top">
-                            <div class="toolbar-inner text-align-center">
-                                <a href="#craftsRoom" class="tab-link tab-link-active">
-                                    Crafts<br>Room
-                                </a>
-                                <a href="#pantry" class="tab-link">
-                                    Pantry
-                                </a>
-                                <a href="#fishTank" class="tab-link">
-                                    Fish<br>Tank
-                                </a>
-                                <a href="#boilerRoom" class="tab-link">
-                                    Boiler<br>Room
-                                </a>
-                                <a href="#bulletinBoard" class="tab-link">
-                                    Bulletin<br>Board
-                                </a>
+                            <div class="toolbar tabbar toolbar-top">
+                                <div class="toolbar-inner text-align-center">
+                                    <a href="#craftsRoom" class="tab-link tab-link-active">
+                                        Crafts<br>Room
+                                    </a>
+                                    <a href="#pantry" class="tab-link">
+                                        Pantry
+                                    </a>
+                                    <a href="#fishTank" class="tab-link">
+                                        Fish<br>Tank
+                                    </a>
+                                    <a href="#boilerRoom" class="tab-link">
+                                        Boiler<br>Room
+                                    </a>
+                                    <a href="#bulletinBoard" class="tab-link">
+                                        Bulletin<br>Board
+                                    </a>
+                                </div>
                             </div>
-                        </div>
-                        <div class="page-content">
                             <div class="tabs">
-                                <div class="tab tab-active" id="pantry">
+                                <div class="tab tab-active" id="craftsRoom">
                                 </div>
-                                <div class="tab" id="Crafts">
+                                <div class="tab" id="pantry">
                                 </div>
-                                <div class="tab" id="Fish">
+                                <div class="tab" id="fishTank">
                                 </div>
-                                <div class="tab" id="Mining">
+                                <div class="tab" id="boilerRoom">
                                 </div>
-                                <div class="tab" id="Misc">
+                                <div class="tab" id="bulletinBoard">
                                 </div>
                             </div>
                         </div>
