All groups of items are now collapsable - app loads much quicker on slower devices

--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
         content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
     <meta name="theme-color" content="#316606">
-    <title>stardew-tracker</title>
+    <title>Stardew Tracker</title>
     <link rel="stylesheet" href="lib/framework7/css/framework7.bundle.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/fontello.css">
