--- a/www/index.html
+++ b/www/index.html
@@ -84,6 +84,9 @@
                                     <a href="#bulletinBoard" class="tab-link">
                                         Bulletin<br>Board
                                     </a>
+                                    <a href="#vault" class="tab-link">
+                                        Vault
+                                    </a>
                                 </div>
                             </div>
                             <div class="tabs">
@@ -96,6 +99,8 @@
                                 <div class="tab" id="boilerRoom">
                                 </div>
                                 <div class="tab" id="bulletinBoard">
+                                </div>
+                                <div class="tab" id="vault">
                                 </div>
                             </div>
                         </div>
