Added dark mode!

--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,11 @@
                                     <a href="#seasons" class="button button-outline tab-link type col-50">Seasons</a>
                                     <a href="#bundles" class="button button-fill tab-link type col-50">Bundles</a>
                                 </div>
-                                <div class="title">Stardew Tracker</div>
+                                <div class="title row no-gap" id="title">
+                                    <button class="col-20 button button-outline active-mode light-mode">Light</button>
+                                    <div class="col-60">Stardew Tracker</div>
+                                    <button class="col-20 button button-fill dark-mode">Dark</button>
+                                </div>
                             </div>
                             <div class="toolbar tabbar toolbar-top">
                                 <div class="toolbar-inner">
@@ -65,7 +69,11 @@
                                     <a href="#seasons" class="button button-fill tab-link type col-50">Seasons</a>
                                     <a href="#bundles" class="button button-outline tab-link type col-50">Bundles</a>
                                 </div>
-                                <div class="title">Stardew Tracker</div>
+                                <div class="title row no-gap" id="title">
+                                    <button class="col-20 button button-outline active-mode light-mode">Light</button>
+                                    <div class="col-60">Stardew Tracker</div>
+                                    <button class="col-20 button button-fill dark-mode">Dark</button>
+                                </div>
                             </div>
                             <div class="toolbar tabbar toolbar-top">
                                 <div class="toolbar-inner text-align-center">
