Completely restyled app

--- a/www/index.html
+++ b/www/index.html
@@ -22,13 +22,14 @@
                         <div class="tab tab-active" id="seasons">
                             <div class="navbar justify-content-center align-content-center" id="navbar">
                                 <div class="navbar-inner row no-gap">
-                                    <a href="#seasons" class="button button-outline tab-link type col-50">Seasons</a>
-                                    <a href="#bundles" class="button button-fill tab-link type col-50">Bundles</a>
+                                    <a href="#seasons"
+                                        class="button button-outline active-mode tab-link type col-50">Seasons</a>
+                                    <a href="#bundles" class="button button-outline tab-link type col-50">Bundles</a>
                                 </div>
                                 <div class="title row no-gap" id="title">
                                     <button class="col-20 button button-outline active-mode light-mode">Light</button>
                                     <div class="col-60">Stardew Tracker</div>
-                                    <button class="col-20 button button-fill dark-mode">Dark</button>
+                                    <button class="col-20 button button-outline dark-mode">Dark</button>
                                 </div>
                             </div>
                             <div class="toolbar tabbar toolbar-top">
@@ -66,13 +67,14 @@
                         <div class="tab" id="bundles">
                             <div class="navbar justify-content-center align-content-center" id="navbar">
                                 <div class="navbar-inner row no-gap">
-                                    <a href="#seasons" class="button button-fill tab-link type col-50">Seasons</a>
-                                    <a href="#bundles" class="button button-outline tab-link type col-50">Bundles</a>
+                                    <a href="#seasons" class="button button-outline tab-link type col-50">Seasons</a>
+                                    <a href="#bundles"
+                                        class="button button-outline active-mode tab-link type col-50">Bundles</a>
                                 </div>
                                 <div class="title row no-gap" id="title">
                                     <button class="col-20 button button-outline active-mode light-mode">Light</button>
                                     <div class="col-60">Stardew Tracker</div>
-                                    <button class="col-20 button button-fill dark-mode">Dark</button>
+                                    <button class="col-20 button button-outline dark-mode">Dark</button>
                                 </div>
                             </div>
                             <div class="toolbar tabbar toolbar-top">
